# cse291_proj

./: .gitignore  .gitmodules  Dockerfile  README.md  eval.py  main.py  make_dataset.py  process_existing_videos.py  pyproject.toml  register_pointclouds.py  run.py  setup.sh  teaserpp_registration.py  visualize.py  visualize_pointcloud.ipynb
TEASER-plusplus/teaser/src/: graph.cc
TraceAnything/: pyproject.toml
TraceAnything/scripts/: view.py
TraceAnything/trace_anything/layers/: patch_embed.py
config/trajectory_estimation/: base.yaml
config/trajectory_estimation/model/: eval.yaml
config/video_generation/: config.yaml
prompts/: prompts4data.txt
prompts/video_generation/: negative_prompt.txt
prompts/video_generation/prompts/: sample_prompts.json  test_prompts.json
reporting/: README.md  aggregate_resamples.py  results2table.py  visualize_results.py
src/pipeline/: __init__.py  pipeline.py  pointcloud_extraction.py  registration.py  sam3d_registration.py  segmentation.py  teaser_registration.py  teaserpp_registration.py  tracing.py  video_generation.py
src/trajectory_estimation/: estimator.py  grounded_dino.py  grounded_sam.py  image_utils.py  model_utils.py
src/video_generation/: generator.py
tests/: test_grounded_dino.py  test_sam.py  test_trace_anything.py  test_wan.py
