[project]
name = "cse291"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "diffusers>=0.35.2",
    "einops>=0.8.1",
    "ftfy>=6.3.1",
    "huggingface-hub[cli]>=0.36.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.7",
    "numpy>=1.26.4",
    "nvitop>=1.5.3",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pdbpp>=0.11.7",
    "pillow>=12.0.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "viser>=1.0.15",
    "xfuser>=0.4.4",
]
